<resources>
    <string name="app_name">Auto assistant</string>
    <string name="start_app">Вперёд!</string>
    <string name="content_desc">Логотип приложения</string>
    <string name="hint_edtname">Как мне к вам обращаться?</string>
    <string name="toast_name">Заполните, пожалуйста, поле</string>
    <string name="hint_edtmass">Масса авто (кг)</string>
    <string name="hint_edtrad">Радиус колеса (м)</string>
    <string name="input_data">Введите данные, необходимые для работы приложения</string>
    <string name="forward">Далее</string>
    <string name="toast_forward">Оба поля должны быть заполнены</string>
    <string name="description_of_app">Приветствую в приложении Auto assistant. Приложение создано для предоставления водителю различной информации о движении и положении ТС. Информация, предоставляемая приложением носит чисто информативный характер и не претендует на точность физических приборов. Пользуйтесь и получайте удовольствие и не забудьте пристегнуть ремни безопасности.</string>
    <string name="roll">Крен</string>
    <string name="speed">Скоростные показатели</string>
    <string name="force">Силовые показатели</string>
    <string name="other">Другие показатели</string>
    <string name="hint_roll">Угол крена:</string>
    <string name="hint_rise">Угол подъёма:</string>
    <string name="desc_back">Проградуированные дуги</string>
    <string name="desc_car_front">Машина в лобовой проекции</string>
    <string name="desc_car_side">Машина в боковой проекции</string>
    <string name="btn_back">Кнопка назад</string>
    <string name="btn_start">Кнопка начала измерений</string>
    <string name="toast_reminder">Закрепите телефон неподвижно!</string>
    <string name="correct_rice">Корректировка угла подъёма</string>
    <string name="toast_edt_start">Положительное число и не более 100</string>
    <string name="btn_update">Кнопка сброса дистанции</string>
    <string name="tv_distance">Пройденная дистанция (км):\n</string>
    <string name="tv_velocity">Скорость\n (км/ч):\n</string>
    <string name="tv_rotation_frequency">Частота вращения колёс (об/мин):\n</string>
    <string name="tv_angular_velocity">Угловая скорость колеса (км/ч):\n</string>
    <string name="tv_braking_distance">Тормозной путь до полной остановки (м):\n</string>
    <string name="tv_braking_time">Время торможения до полной остановки (сек):\n</string>
    <string name="tv_acceleration">Ускорение\n (м/с^2):\n</string>
    <string name="tv_pulse">Импульс тела\n(т*км/ч):\n</string>
    <string name="save_data">СОХРАНИТЬ</string>
    <string name="update_data">ОБНОВИТЬ</string>
    <string name="tv_traction_force">Сила тяги\n (кн):\n</string>
    <string name="negativeBtn">Назад</string>
    <string name="positiveBtn">Таки да!</string>
    <string name="dialogTitle">Сбросить счётчик: Вы уверены?</string>
    <string name="toast_gps">Не забудьте включить GPS на Вашем устройстве</string>
</resources>