<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_violet"
    android:orientation="vertical"
    tools:context=".view.SelectionModeActivity">


    <LinearLayout
        android:id="@+id/linear_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn1"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_selection"
            android:onClick="onBtnRoll"
            android:text="@string/roll"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn2"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_selection"
            android:onClick="onBtnSpeed"
            android:text="@string/speed"
            android:textColor="@color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_view"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:background="@drawable/txt_border"
        android:textColor="@color/gray"
        android:padding="10dp"
        android:text="@string/input_data"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_margin="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view">

        <EditText
            android:width="1dp"
            android:paddingStart="10dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/edt_mass"
            android:hint="@string/hint_edtmass"
            android:textCursorDrawable="@null"
            android:background="@drawable/tv_border"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="date" />

        <EditText
            android:width="1dp"
            android:paddingStart="10dp"
            android:layout_marginStart="5dp"
            android:id="@+id/edt_rad"
            android:hint="@string/hint_edtrad"
            android:textCursorDrawable="@null"
            android:background="@drawable/tv_border"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_selection"
            android:onClick="onBtnSave"
            android:text="@string/save_data"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdate"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_selection"
            android:onClick="onBtnUpdate"
            android:text="@string/update_data"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>