<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".view.RollActivity">

    <TextView
        android:id="@+id/tv_rice"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:hint="@string/hint_rise"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/im_rice"
        app:layout_constraintEnd_toEndOf="@+id/im_rice_back"
        app:layout_constraintStart_toStartOf="@+id/im_rice_back"
        app:layout_constraintTop_toTopOf="@+id/im_rice_back" />

    <TextView
        android:id="@+id/tv_roll"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:hint="@string/hint_roll"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/im_roll"
        app:layout_constraintEnd_toEndOf="@+id/im_roll_back"
        app:layout_constraintStart_toStartOf="@+id/im_roll_back"
        app:layout_constraintTop_toTopOf="@+id/im_roll_back" />

    <ImageView
        android:id="@+id/im_rice_back"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/desc_back"
        android:gravity="center"
        android:src="@drawable/background"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im_roll_back"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/desc_back"
        android:gravity="center"
        android:src="@drawable/background"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/im_rice"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/hint_rise"
        android:src="@drawable/car_side"
        app:layout_constraintBottom_toBottomOf="@+id/im_rice_back"
        app:layout_constraintEnd_toEndOf="@+id/im_rice_back"
        app:layout_constraintStart_toStartOf="@+id/im_rice_back"
        app:layout_constraintTop_toTopOf="@+id/im_rice_back" />

    <ImageView
        android:id="@+id/im_roll"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/hint_roll"
        android:src="@drawable/car_front"
        app:layout_constraintBottom_toBottomOf="@+id/im_roll_back"
        app:layout_constraintEnd_toEndOf="@+id/im_roll_back"
        app:layout_constraintStart_toStartOf="@+id/im_roll_back"
        app:layout_constraintTop_toTopOf="@+id/im_roll_back" />

    <EditText
        android:id="@+id/edtStart"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:visibility="invisible"
        android:hint="@string/correct_rice"
        android:inputType="date"
        android:textCursorDrawable="@null"
        android:backgroundTint="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/im_roll_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/im_rice_back" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_btn_back"
            android:scaleType="centerInside"
            android:onClick="btnBack"
            android:contentDescription="@string/btn_back"
            app:srcCompat="@drawable/btn_back" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switcher"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/shape_btn_roll_activity"
            android:theme="@style/Theme.AutoAssistant" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>